--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   "dependencies": {
     "@babel/cli": "^7.14.8",
     "@babel/preset-react": "^7.14.5",
+    "@googlemaps/js-api-loader": "^1.12.2",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.1.0",
     "express": "^4.17.1",
+    "google-map-react": "^2.1.10",
     "mongoose": "^5.13.8",
     "morgan": "^1.10.0",
     "node": "^16.6.1",
